2010-12-20  Petr Lautrbach  <plautrba@redhat.com>

	* util/shutdown.c: Exit non-zero if unable to shutdown the system.

2010-12-14  Scott James Remnant  <scott@netsplit.com>

	* configure.ac: Bump version to 0.6.8
	* NEWS: Begin new release

	* NEWS: Release 0.6.7

	* dbus/com.ubuntu.Upstart.Job.xml (start_on, stop_on, emits): Add new
	properties to return the job's relationship to events.
	* init/job_class.c (job_class_get_start_on)
	(job_class_get_stop_on, job_class_get_emits): Implement the properties
	* init/job_class.h: Add prototypes.
	* init/tests/test_job_class.c (test_get_start_on)
	(test_get_stop_on, test_get_emits): Test the new properties too

2010-12-14  James Hunt  <james.hunt@ubuntu.com>

	* init/parse_job.c (stanza_manual): New function to handle manual
	stanza.
	* init/tests/test_parse_job.c (test_stanza_manual): New function to
	test manual stanza.
	* init/man/init.5: Update for manual stanza.

2010-12-14  James Hunt <james.hunt@ubuntu.com>

	* init/job_class.h: Added debug member.
	* init/job_class.c: Initialized debug member.
	* init/job_process.c: Pause child using raise(3).
	* init/main.c: Display PID+PPID for debug builds.
	* init/parse_job.c: Added new function stanza_debug.
	* init/tests/test_job_process.c (test_spawn): Added test for debug stanza.

2010-12-10  Scott James Remnant  <scott@netsplit.com>

	* dbus/upstart.h (DBUS_SERVICE_UPSTART, DBUS_ADDRESS_UPSTART):
	For debugging purposes, when -DDEBUG is given, change the values of
	these constants.  You'll need to modify your own D-Bus configuration
	of course.

2010-12-09  Scott James Remnant  <scott@netsplit.com>

	* init/tests/test_job.c (test_change_state): Add missing
	DBUS_TYPE_INVALID to dbus_message_get_args() call.

2010-12-08  Colin Watson  <cjwatson@debian.org>

	* dbus/com.ubuntu.Upstart.Instance.xml (GoalChanged, StateChanged)
	(Failed): New signals.
	* init/job.c (job_change_goal): Emit GoalChanged signal after